# ib-shell

./: Cargo.toml  LICENSE.txt  README.md
ib-ime/: Cargo.toml  README.md
ib-ime/examples/: winio.rs
ib-ime/src/: hook.rs  imm.rs  lib.rs
ib-shell/: Cargo.toml  inject-hook.ps1
ib-shell-item/: Cargo.toml  README.md  inject-hook.ps1
ib-shell-item/examples/: hook.rs
ib-shell-item/src/: id_list.rs  item.rs  lib.rs  path.rs  string.rs
ib-shell-item/src/folder/: compare.rs  mod.rs
ib-shell-item/src/hook/: display_name.rs  dll.rs  inject.rs  mod.rs
ib-shell-item/src/hook/folder/: mod.rs
ib-shell-item/src/hook/prop/: magic.rs  mod.rs  system.rs  value.rs
ib-shell-item/src/hook/property/: mod.rs  value.rs
ib-shell-item/src/item/: item2.rs  mod.rs
ib-shell-item/src/prop/: attribute.rs  column.rs  mod.rs  store.rs
ib-shell-item/src/property/: mod.rs  store.rs  system.rs
ib-shell-item/src/string/: bar.rs  mod.rs
ib-shell-verb/: Cargo.toml  README.md
ib-shell-verb/OpenFileInWorkspace/: OpenFileInWorkspace.vbs
ib-shell-verb/src/: hook.rs  lib.rs  workspace.rs
ib-shell-winio/: Cargo.toml
ib-shell/examples/: hook.rs
ib-shell/src/: app.rs  lib.rs
ib-shell/src/hook/: dll.rs  inject.rs  mod.rs
