[workspace]
members = [
    "ib-ime",
    "ib-shell-item",
    "ib-shell-verb",
    # "ib-shell-winio",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/Chaoses-Ib/ib-shell"
license = "MIT"

[patch.crates-io]
everything-ipc = { git = "https://github.com/Chaoses-Ib/IbEverythingLib" }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release-debug]
inherits = "release"
debug-assertions = true
