[package]
name = "ib-shell-item"
version = "0.1.1"
edition = "2024"
description = "A library for operating file system files / Windows Shell items."
keywords = ["path", "file", "shell", "desktop-environment", "desktop"]
categories = ["gui", "os"]
repository.workspace = true
license.workspace = true

[features]
default = [
    "property",
]

property = [
    "windows/Win32_UI_Shell_PropertiesSystem",
    "windows/Win32_System_Com_StructuredStorage",
    "windows/Win32_System_Variant",
    "windows/Win32_Storage_EnhancedStorage",
]

hook = [
    "dep:slim-detours-sys",
]
hook-dll = [
    "dep:dll-syringe",
]
hook-log = [
    "dep:tracing-subscriber",
    "dep:tracing-appender",
]

everything = [
    "dep:everything-ipc",
    "dep:tokio",
]

bin = [
    "dep:clap",
    "dep:ctrlc",
    "dep:tracing-subscriber",
]

[dependencies]
anyhow = "1"
bon = "3"
clap = { version = "4", optional = true, features = ["derive"] }
ctrlc = { version = "3", optional = true, features = ["termination"] }
everything-ipc = { version = "0.1", optional = true }
num_enum = { version = "0.7", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", optional = true, features = ["rt"] }
tracing = "0.1"
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
widestring = "1"

[target.'cfg(target_family = "windows")'.dependencies]
dll-syringe = { version = "0.17", optional = true, features = ["payload-utils", "rpc-core"] }
slim-detours-sys = { version = "0.4", optional = true }
windows = { version = "0.62", features = [
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
] }
windows-link = "0.2"
windows-sys = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
] }

[dev-dependencies]
ib-shell-item = { path = ".", features = [
    "hook",
    "hook-dll",
    "hook-log",
    "everything",
    "bin",
] }

[[example]]
name = "hook"
crate-type = ["cdylib"]

[[bin]]
name = "inject-hook"
required-features = ["hook", "hook-dll", "bin"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-features = true
# To test this locally, run:
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
# $env:RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --all-features
# ```
rustdoc-args = ["--cfg", "docsrs"]
