[package]
name = "ib-shell-verb"
version = "0.1.0"
edition = "2024"
description = "A library for handling of custom Windows Shell verbs (actions like `open`) and injecting them."
keywords = ["shell", "desktop-environment", "desktop", "hook"]
categories = ["gui", "os"]
repository.workspace = true
license.workspace = true

[features]
## Hook for injecting custom Windows Shell verbs.
hook = ["dep:slim-detours-sys"]

bin = ["dep:clap"]

doc = ["dep:document-features"]

[dependencies]
anyhow = "1"
bon = "3"
clap = { version = "4", optional = true, features = ["derive"] }
document-features = { version = "0.2", optional = true }
ib-shell-item = { version = "0.1", path = "../ib-shell-item" }
open = { version = "5", features = ["shellexecute-on-windows"] }
tracing = "0.1"
which = "8"

[target.'cfg(target_family = "windows")'.dependencies]
slim-detours-sys = { version = "0.4", optional = true }
widestring = "1"
windows = "0.62"
windows-sys = { version = "0.61", features = [
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }

[dev-dependencies]
ib-shell-verb = { path = ".", features = [
    "hook",
] }

[[bin]]
name = "ib-open-workspace"
required-features = ["bin"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
all-features = true
# To test this locally, run:
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
# $env:RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --all-features
# ```
rustdoc-args = ["--cfg", "docsrs"]
